fixed text wrapping

--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@ header{
 
 .qoute{
     max-width: 700px;
+    min-width: 700px;
     align-self: center;
     padding: 85px 0px 65px;
 }
@@ -162,6 +163,7 @@ header{
 
 footer{
     width: 100%;
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -170,6 +172,9 @@ footer{
     font-size: 12px;
 }
 
+.foot{
+    min-width: 191px;
+}
 
 
 
@@ -188,6 +193,7 @@ footer, .hold_head{
     font-size: 24px;
     font-weight: bolder;
     color: #1f2937;
+    min-width: 307px;
 }
 
 .qoute_text{
@@ -240,6 +246,7 @@ button{
     margin: 0px 900px;
     color: #f9faf8;
     border-radius: 10px;
+    min-width: 750px
 }
 
 .call_title{
